# CnC_and_Red_Alert

./: CLAUDE.md  README.md
RA/: 2keyfbuf.cpp  2keyfram.cpp  CMakeLists.txt  aircraft.cpp  audio.cpp  building.cpp  building.h  cell.cpp  display.cpp  drive.cpp  factory.cpp  factory.h  foot.cpp  house.cpp  infantry.cpp  init.cpp  loaddlg.cpp  logic.cpp  map.cpp  menus.cpp  mpgset.cpp  mplayer.cpp  netdlg.cpp  nulldlg.cpp  object.cpp  power.cpp  rules.cpp  scroll.cpp  seditdlg.cpp  sendfile.cpp  sidebar.cpp  sidebar.h  startup.cpp  tab.cpp  techno.cpp  theme.cpp  udpaddr.cpp  winasm.cpp  wol_cgam.cpp  wol_chat.cpp  (+3 more)
SDLLIB/: CMakeLists.txt  audio.cpp  drawbuff_sdl.cpp  hq2x.cpp  keyboard.cpp  realism.cpp  window.cpp
SDLLIB/include/: gbuffer.h
TD/: ipxstub.cpp  techno.cpp
WINVQ/VQA32/: audio.cpp
